; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_head_ref_namespaced.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_head_ref_namespaced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.object_id = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [7 x i8] c"%sHEAD\00", align 1
@RESOLVE_REF_READING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @head_ref_namespaced(i32 (i32, %struct.object_id*, i32, i8*)* %0, i8* %1) #0 {
  %3 = alloca i32 (i32, %struct.object_id*, i32, i8*)*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.strbuf, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.object_id, align 4
  %8 = alloca i32, align 4
  store i32 (i32, %struct.object_id*, i32, i8*)* %0, i32 (i32, %struct.object_id*, i32, i8*)** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %6, align 4
  %10 = call i32 (...) @get_git_namespace()
  %11 = call i32 @strbuf_addf(%struct.strbuf* %5, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @RESOLVE_REF_READING, align 4
  %15 = call i32 @read_ref_full(i32 %13, i32 %14, %struct.object_id* %7, i32* %8)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %24, label %17

17:                                               ; preds = %2
  %18 = load i32 (i32, %struct.object_id*, i32, i8*)*, i32 (i32, %struct.object_id*, i32, i8*)** %3, align 8
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 %18(i32 %20, %struct.object_id* %7, i32 %21, i8* %22)
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %17, %2
  %25 = call i32 @strbuf_release(%struct.strbuf* %5)
  %26 = load i32, i32* %6, align 4
  ret i32 %26
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32) #2

declare dso_local i32 @get_git_namespace(...) #2

declare dso_local i32 @read_ref_full(i32, i32, %struct.object_id*, i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
